...
                android:layout_height="wrap_content"
                android:text="@string/title_preset"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/presetSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_weight="1"
...
            android:text="@string/title_equalizer"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/equalizerTableLayout"
            android:layout_weight="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
...
                    android:layout_weight="@dimen/equalizer_band_title_weight"
                    android:gravity="center"
                    android:text="@string/label_first_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp"/>
                <SeekBar
                    android:id="@+id/equalizerBandSeekbar1"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue1"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
...
                    android:gravity="center"
                    android:text="@string/label_second_freq_band"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue2"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
...
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue3"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
...
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue4"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
...
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/equalizerBandValue5"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
                    android:text="+4.0"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>
...
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle">

            <Button
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_apply" />

            <Button
                android:id="@+id/revertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_revert" />
        </LinearLayout>

        <TextView
            android:id="@+id/volumeTitle"
            android:gravity="center"
            android:layout_weight="10"
...
