...
    <item
        android:id="@+id/navigation_media_player"
        android:icon="@drawable/ic_media_player_black_24dp"
        android:title="@string/title_media_player" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>

